@@ -1,3 +1,9 @@
+2012-01-06 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc.c:
+	  Minor code cleanup.
+
 2013-01-06 Molnar Karoly <molnarkaroly AT users.sf.net>
 
 	* support/scripts/mcs51-disasm:
